[package]
name = "Spot2mp3"
version = "0.1.0"
edition = "2024"

[dependencies]
clap ={ version = "4", features = ["derive"]}
tokio ={ version = "1.40", features = ["full"] }
anyhow = "1"
csv = "1"
serde = { version = "1", features = ["derive"]}
serde_json = "1.0"
indicatif = "0.17"
regex = "1"
log = "0.4.28"
env_logger = "0.11.8"